Barebone workings of the app. Does extraction and finds artists. Issues: Spotify login errors out Doesnt add to playlists Can def be broken in many ways

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 .env.test.local
 .env.production.local
 
+.cache
+
 # Python
 __pycache__/
 *.py[cod]
@@ -88,3 +90,5 @@ htmlcov/
 !/.env
 
 !/.env.example
+/.cache
+/.env
