--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ google-cloud-aiplatform>=1.30.0
 google-cloud-vision>=3.0.0
 google-auth>=2.20.0
 google-generativeai>=0.3.0
+firebase-admin>=6.0.0
 
 # Spotify API
 spotipy>=2.20.0
